# Towow

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  ARCHITECTURE_REFACTOR_PLAN.md  CLAUDE.md  Dockerfile  OPENAGENTS_DEV_GUIDE.md  README.md  TEAM_MATCHER_README.md  TESTING_GUIDE.md  ToWow-Design-MVP.md  railway.toml  start-dev.sh  test_full_service.py  test_integration.py  test_secondme_api.py
backend/: .env.local.example  Dockerfile  Procfile  agent_manager.py  app.py  bridge_agent.py  database.py  debug_chat.py  main.py  nixpacks.toml  oauth2_client.py  pyproject.toml  railway.toml  requirements.txt  server.py  session_store_redis.py  start.sh  team_composition_engine.py  team_prompts.py  websocket_manager.py
backend/docs/: SDK_GUIDE.md
backend/examples/: custom_adapter.py  custom_tool.py  headless.py
backend/routers/: __init__.py  auth.py
backend/scripts/: seed_demo.py
backend/towow/: __init__.py  builder.py
mcp-server/: README.md  pyproject.toml
mcp-server/towow_mcp/: __init__.py  client.py  config.py  server.py
towow/: .dockerignore  .env.example  .env.save  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  e2e_test_report.json  pyproject.toml  requirements-dev.txt  requirements.txt
towow/api/: __init__.py  auth.py  main.py
towow/data/: mock_agents.json  mock_agents_db.json
towow/database/: __init__.py  connection.py  models.py  services.py
towow/events/: __init__.py  bus.py  integration.py  recorder.py
towow/middleware/: __init__.py  rate_limiter.py
towow/openagents/: __init__.py  config.py  launcher.py
towow/scripts/: deploy.sh  generate_mock_agents.py  init_db.py  load_mock_profiles.py  run_e2e_test.py  test_connection.py
towow/services/: __init__.py  demo_mode.py  gap_identification.py  gap_types.py  llm.py  (+4 more)
(+1128 files in other folders)
