[project]
name = "towow-sdk"
version = "0.1.0"
description = "Towow Agent-to-Agent negotiation engine SDK"
readme = "docs/SDK_GUIDE.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
claude = ["anthropic>=0.30"]
embeddings = ["sentence-transformers>=2.0"]
web = ["fastapi>=0.109", "uvicorn>=0.27", "websockets>=12.0"]
all = ["towow-sdk[claude,embeddings,web]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["towow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-q --tb=short"
markers = [
    "slow: tests that require downloading/loading ML models",
]
